<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="410dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal"
        android:background="@color/darkred"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/action"
            android:layout_weight=".15"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/txtaction1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dishname"
            android:layout_weight=".6"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/txtitm" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/action"
            android:layout_weight=".25"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/txtaction2" />
    </LinearLayout>



    <ListView
        android:id="@+id/lv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".78"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:weightSum="1">

        <Button
            android:id="@+id/btnordermore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/purered"
            android:text="BACK"
            android:textColor="@color/white"
            android:textSize="28sp" />
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/btnplaceorder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/darkgreen"
            android:text="@string/placeorder"
            android:textColor="@color/white"

            android:textSize="28sp" />
    </LinearLayout>



</LinearLayout>
